# MCTR260Robocops

./: README.md
MCTR260-pico-firmware - herpes/: .gitignore  LICENSE  README.md  platformio.ini
MCTR260-pico-firmware - herpes/doc/user_guide_documentation/: ARCHITECTURE.md  BLE_PROTOCOL.md  CONFIGURATION_REFERENCE.md  EXTENDING_THE_FIRMWARE.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  WIRING_GUIDE.md
MCTR260-pico-firmware - herpes/resources/ble-advertisement-main/ble-advertisement-main/: CMakeLists.txt  README.md  pico_sdk_import.cmake
MCTR260-pico-firmware - herpes/resources/ble-advertisement-main/ble-advertisement-main/src/: ble_advertise.c  ble_advertise.h  inventor.gatt.in  main.c
MCTR260-pico-firmware - herpes/resources/motor-control-pcbs-main/motor-control-pcbs-main/: .gitignore  README.md
MCTR260-pico-firmware - herpes/src/: main.cpp  project_config.h
MCTR260-pico-firmware - herpes/src/core/: ble_config.h  ble_controller.cpp  ble_controller.h  command_packet.h  command_parser.cpp  command_parser.h  motor_base.h  motor_dc.cpp  motor_dc.h  motor_manager.cpp  motor_manager.h  motor_stepper.cpp  motor_stepper.h  safety.cpp  safety.h  simple_stepper.cpp  simple_stepper.h
MCTR260-pico-firmware - herpes/src/drivers/: mcp23017.cpp  mcp23017.h  mecanum_kinematics.cpp  mecanum_kinematics.h
MCTR260-pico-firmware - herpes/src/profiles/: profile_aux_motors.cpp  profile_aux_motors.h  profile_grippercpp.txt  profile_intake_DC_motor.h  profile_mecanum.cpp  profile_mecanum.h
(+75 files in other folders)
